--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -13,3 +13,16 @@
 @tablet-only: ~"(max-width: @{tablet-max-width})";
 
 @retina: ~"(min-resolution: @{retina-dpi})";
+
+@font-family-base: "Open Sans", "Arial", sans-serif;
+@font-size-base: 15px;
+@line-height-base: 24px;
+
+@black: #000000;
+@white: #ffffff;
+
+@bg-color-body: #ffffff;
+@bg-color-icon: #d3d2d2;
+@bg-color-separate: #ececec;
+
+@font-color-base: #444444;
