Стилизация мобильной версии главной страницы.

--- a/src/less/blocks/page.less
+++ b/src/less/blocks/page.less
@@ -8,3 +8,10 @@
   color: @font-color-base;
   background-color: @bg-color-body;
 }
+
+.page__overlay {
+  position: fixed;
+  z-index: 50;
+  left: 0;
+  top: 0;
+}
