--- a/src/less/common.less
+++ b/src/less/common.less
@@ -3,7 +3,9 @@ a {
   color: inherit;
 }
 
-.visually-hidden {
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
   position: absolute;
   overflow: hidden;
   margin: -1px;
