--- a/src/less/blocks/header-logo.less
+++ b/src/less/blocks/header-logo.less
@@ -2,6 +2,14 @@
   display: block;
   width: 86px;
   height: 35px;
+
+  &[href]:hover {
+    opacity: 0.6;
+  }
+
+  &[href]:active {
+    opacity: 0.3;
+  }
 }
 
 .header-logo__image {
