--- a/src/less/style.less
+++ b/src/less/style.less
@@ -5,6 +5,7 @@
 @import "mixins/lists.less";
 @import "mixins/ps-drop-shadow.less";
 
+@import "blocks/button.less";
 @import "blocks/page.less";
 @import "blocks/content-wrapper.less";
 @import "blocks/main-nav.less";
@@ -12,3 +13,18 @@
 @import "blocks/site-navigation.less";
 @import "blocks/user-navigation.less";
 @import "blocks/stock-navigation.less";
+@import "blocks/promo.less";
+@import "blocks/promo-list.less";
+@import "blocks/week-goods.less";
+@import "blocks/section-title.less";
+@import "blocks/table-specification.less";
+@import "blocks/advantages.less";
+@import "blocks/advantages-list.less";
+@import "blocks/reviews.less";
+@import "blocks/contacts.less";
+@import "blocks/map.less";
+@import "blocks/mail-link.less";
+@import "blocks/form-cart.less";
+@import "blocks/page-footer.less";
+@import "blocks/social-links.less";
+@import "blocks/modal-overlay.less";
