--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -20,9 +20,36 @@
 
 @black: #000000;
 @white: #ffffff;
+@gray-primary: #444444;
+@gray-secondary: #f1f1f1;
+@green-primary: #63d1bb;
+@green-primary--hover: #59d5bc;
+@green-secondary: #56c3b2;
+@green-secondary--hover: #46c1ae;
 
-@bg-color-body: #ffffff;
+@bg-color-body: @white;
+@bg-color-button: @white;
+@bg-color-button--hover: @gray-primary;
+@bg-color-button--active: @gray-primary;
+@bg-color-footer: @gray-secondary;
 @bg-color-icon: #d3d2d2;
+@bg-color-promo: #f9f9f9;
 @bg-color-separate: #ececec;
 
-@font-color-base: #444444;
+@border-color-button: @gray-primary;
+@border-color-input: @gray-primary;
+@border-color-input--hover: #62d1ba;
+@border-color-input--active: fade(@border-color-input, 30%);
+@border-color-modal: #c6c6c6;
+
+@font-color-base: @gray-primary;
+@font-color-button: @font-color-base;
+@font-color-button--hover: @white;
+@font-color-button--active: fade(@font-color-button--hover, 30%);
+@font-color-heading: @black;
+@font-color-legend: @green-primary;
+@font-color-mail: @green-secondary--hover;
+@font-color-menu: @black;
+@font-color-menu--hover: fade(@font-color-menu, 60%);
+@font-color-menu--active: fade(@font-color-menu, 30%);
+@font-color-section-title: @black;
