Стилизация мобильной версии страницы каталога.

--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -32,7 +32,7 @@
 @bg-color-button--hover: @gray-primary;
 @bg-color-button--active: @gray-primary;
 @bg-color-footer: @gray-secondary;
-@bg-color-icon: #d3d2d2;
+@bg-color-icon: fade(@black, 20%);
 @bg-color-promo: #f9f9f9;
 @bg-color-separate: #ececec;
 
