--- a/src/less/style.less
+++ b/src/less/style.less
@@ -28,3 +28,7 @@
 @import "blocks/page-footer.less";
 @import "blocks/social-links.less";
 @import "blocks/modal-overlay.less";
+@import "blocks/page-main.less";
+@import "blocks/catalog.less";
+@import "blocks/card-product.less";
+@import "blocks/video.less";
