--- a/src/less/style.less
+++ b/src/less/style.less
@@ -32,3 +32,4 @@
 @import "blocks/catalog.less";
 @import "blocks/card-product.less";
 @import "blocks/video.less";
+@import "blocks/form-feedback.less";
