--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -47,6 +47,7 @@
 @font-color-button--hover: @white;
 @font-color-button--active: fade(@font-color-button--hover, 30%);
 @font-color-heading: @black;
+@font-color-label: @black;
 @font-color-legend: @green-primary;
 @font-color-mail: @green-secondary--hover;
 @font-color-menu: @black;
