--- a/src/less/blocks/card-product.less
+++ b/src/less/blocks/card-product.less
@@ -37,6 +37,14 @@
   border: 1px solid @bg-color-separate;
 }
 
+.card-product:hover .card-product__description-wrapper {
+  .ps-drop-shadow(@black; 10%; 90deg; 6px; 0; 10px);
+}
+
+.card-product:active .card-product__description-wrapper {
+  .ps-drop-shadow(@black; 10%; 90deg; 3px; 0; 5px);
+}
+
 .card-product__title {
   margin-top: 0;
   margin-bottom: 5px;
