--- a/src/less/blocks/page-main.less
+++ b/src/less/blocks/page-main.less
@@ -15,3 +15,9 @@
 .page-main__video {
   margin-bottom: 58px;
 }
+
+.page-main__text {
+  margin: 22px 0 14px;
+  padding: 0 30px;
+  font-size: 13px;
+}
