Стилизация планшетной версии главной страницы.

--- a/src/less/blocks/header-logo.less
+++ b/src/less/blocks/header-logo.less
@@ -10,10 +10,20 @@
   &[href]:active {
     opacity: 0.3;
   }
+
+  @media @tablet {
+    width: 112px;
+    height: 46px;
+  }
 }
 
 .header-logo__image {
   display: block;
   width: 86px;
   height: 35px;
+
+  @media @tablet {
+    width: 112px;
+    height: 46px;
+  }
 }
