--- a/src/less/blocks/section-title.less
+++ b/src/less/blocks/section-title.less
@@ -3,4 +3,9 @@
   font-weight: 700;
   line-height: 30px;
   color: @font-color-section-title;
+
+  @media @tablet {
+    font-size: 43px;
+    line-height: 50px;
+  }
 }
