--- a/src/less/style.less
+++ b/src/less/style.less
@@ -33,3 +33,4 @@
 @import "blocks/card-product.less";
 @import "blocks/video.less";
 @import "blocks/form-feedback.less";
+@import "blocks/footer-logo.less";
