--- a/src/less/blocks/advantages-list.less
+++ b/src/less/blocks/advantages-list.less
@@ -4,11 +4,15 @@
   justify-content: space-around;
 
   .list-reset();
+
+  @media @tablet {
+    justify-content: space-between;
+  }
 }
 
 .advantages__list-item {
   position: relative;
-  flex-basis: 260px;
+  width: 260px;
   padding-top: 54px;
   padding-bottom: 29px;
   font-size: 17px;
@@ -16,63 +20,102 @@
   line-height: 20px;
   background-repeat: no-repeat;
 
+  @media @tablet {
+    padding-bottom: 58px;
+    width: 334px;
+    font-size: 20px;
+    line-height: 22px;
+  }
+
   &::before {
     content: "";
     position: absolute;
     background-repeat: no-repeat;
   }
 
-  &--ecology::before {
-    left: 8px;
-    top: 0;
-    width: 32px;
-    height: 37px;
-    background-image: url("../img/icon-feature-flower.svg");
-    background-size: 32px 37px;
+  &--ecology {
+    &::before {
+      left: 8px;
+      top: 0;
+      width: 32px;
+      height: 37px;
+      background-image: url("../img/icon-feature-flower.svg");
+      background-size: 32px 37px;
+    }
   }
 
-  &--style::before {
-    left: 0;
-    top: 0;
-    width: 47px;
-    height: 27px;
-    background-image: url("../img/icon-feature-money.svg");
-    background-size: 47px 27px;
+  &--style {
+    @media @tablet {
+      order: 2;
+    }
+
+    &::before {
+      left: 0;
+      top: 0;
+      width: 47px;
+      height: 27px;
+      background-image: url("../img/icon-feature-money.svg");
+      background-size: 47px 27px;
+    }
   }
 
-  &--likes::before {
-    left: 7px;
-    top: 6px;
-    width: 33px;
-    height: 28px;
-    background-image: url("../img/icon-feature-heart.svg");
-    background-size: 33px 28px;
+  &--likes {
+    @media @tablet {
+      order: 4;
+    }
+
+    &::before {
+      left: 7px;
+      top: 6px;
+      width: 33px;
+      height: 28px;
+      background-image: url("../img/icon-feature-heart.svg");
+      background-size: 33px 28px;
+    }
   }
 
-  &--handmade::before {
-    left: 3px;
-    top: 3px;
-    width: 34px;
-    height: 34px;
-    background-image: url("../img/icon-feature-ball.svg");
-    background-size: 34px 34px;
+  &--handmade {
+    @media @tablet {
+      order: 1;
+    }
+
+    &::before {
+      left: 3px;
+      top: 3px;
+      width: 34px;
+      height: 34px;
+      background-image: url("../img/icon-feature-ball.svg");
+      background-size: 34px 34px;
+    }
   }
 
-  &--support::before {
-    left: -5px;
-    top: 4px;
-    width: 54px;
-    height: 23px;
-    background-image: url("../img/icon-feature-rocket.svg");
-    background-size: 54px 23px;
+  &--support {
+    @media @tablet {
+      order: 3;
+    }
+
+    &::before {
+      left: -5px;
+      top: 4px;
+      width: 54px;
+      height: 23px;
+      background-image: url("../img/icon-feature-rocket.svg");
+      background-size: 54px 23px;
+    }
   }
 
-  &--gift::before {
-    left: 3px;
-    top: 2px;
-    width: 33px;
-    height: 32px;
-    background-image: url("../img/icon-feature-gift.svg");
-    background-size: 33px 32px;
+  &--gift {
+    @media @tablet {
+      order: 5;
+    }
+
+    &::before {
+      left: 3px;
+      top: 2px;
+      width: 33px;
+      height: 32px;
+      background-image: url("../img/icon-feature-gift.svg");
+      background-size: 33px 32px;
+    }
   }
 }
