--- a/src/less/blocks/advantages.less
+++ b/src/less/blocks/advantages.less
@@ -1,9 +1,18 @@
 .advantages {
   padding-top: 24px;
   padding-bottom: 6px;
+
+  @media @tablet {
+    padding-bottom: 25px;
+  }
 }
 
 .advantages__title {
   margin-top: 4px;
   margin-bottom: 31px;
+
+  @media @tablet {
+    margin-top: 26px;
+    margin-bottom: 48px;
+  }
 }
