--- a/src/less/blocks/content-wrapper.less
+++ b/src/less/blocks/content-wrapper.less
@@ -1,8 +1,13 @@
 .content-wrapper {
+  box-sizing: border-box;
   margin: 0 auto;
   min-width: 320px;
   max-width: 1150px;
   padding-left: 30px;
   padding-right: 30px;
-  box-sizing: border-box;
+
+  @media @tablet {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
 }
