--- a/src/less/blocks/main-nav.less
+++ b/src/less/blocks/main-nav.less
@@ -1,9 +1,23 @@
+.main-nav {
+  @media @tablet {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
 .main-nav__logo-wrapper {
   position: relative;
   display: flex;
   justify-content: center;
-  padding: 22px 30px;
-  .ps-drop-shadow(@bg-color-separate; 100%; 90deg; 1px);
+  box-sizing: border-box;
+  padding: 22px 30px 21px;
+  border-bottom: 1px solid @bg-color-separate;
+
+  @media @tablet {
+    justify-content: flex-start;
+    padding: 21px 50px;
+    width: 48.18%;
+  }
 }
 
 .main-nav__toggle {
@@ -35,8 +49,23 @@
   &::after {
     transform: translate(-50%, -50%) rotate(-45deg);
   }
+
+  @media @tablet {
+    display: none;
+  }
 }
 
 .main-nav__text {
   display: none;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 18px 50px;
+  text-align: right;
+
+  @media @tablet {
+    display: block;
+    order: 2;
+    width: 48%;
+    background-color: @bg-color-promo;
+  }
 }
