--- a/src/less/blocks/page-footer.less
+++ b/src/less/blocks/page-footer.less
@@ -2,15 +2,38 @@
   padding-top: 20px;
   padding-bottom: 10px;
   background-color: @bg-color-footer;
+
+  @media @tablet {
+    padding-top: 48px;
+    padding-bottom: 46px;
+  }
+}
+
+.page-footer__content-wrapper {
+  @media @tablet {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 .page-footer__logo {
   display: none;
+
+  @media @tablet {
+    display: block;
+    margin-right: 83px;
+  }
 }
 
 .page-footer__copyright {
-  margin-top: 41px;
-  margin-bottom: 15px;
+  margin-top: 14px;
+  margin-bottom: 7px;
+
+  @media @tablet {
+    margin: 0;
+    width: 184px;
+  }
 }
 
 .page-footer__copyright-text {
@@ -23,6 +46,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 8px 0 7px;
 
   &:active {
     opacity: 0.3;
