--- a/src/less/blocks/user-navigation.less
+++ b/src/less/blocks/user-navigation.less
@@ -1,19 +1,29 @@
 .user-navigation {
+  box-sizing: border-box;
   .list-reset();
 
   font-size: 17px;
   font-weight: 700;
-}
 
-.user-navigation__item {
-  .ps-drop-shadow(@bg-color-separate; 100%; 90deg; 1px);
+  @media @tablet {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    width: 51.82%;
+    border-bottom: 1px solid @bg-color-separate;
+  }
 }
 
 .user-navigation__link {
   position: relative;
   display: block;
-  padding: 27px 30px 28px 74px;
+  padding: 27px 30px 27px 74px;
+  border-bottom: 1px solid @bg-color-separate;
   color: @font-color-menu;
+
+  @media @tablet {
+    border-bottom: none;
+  }
 
   &[href]:hover {
     color: @font-color-menu--hover;
@@ -21,6 +31,20 @@
 
   &[href]:active {
     color: @font-color-menu--active;
+  }
+
+  &--search {
+    @media @tablet {
+      padding: 44px 40px;
+      border-left: 1px solid @bg-color-separate;
+      border-right: 1px solid @bg-color-separate;
+    }
+  }
+
+  &--cart {
+    @media @tablet {
+      padding: 32px 50px 32px 83px;
+    }
   }
 }
 
@@ -38,5 +62,20 @@
 
   .user-navigation__link:active & {
     fill-opacity: 0.3;
+  }
+}
+
+.user-navigation__link-text {
+  @media @tablet {
+    position: absolute;
+    overflow: hidden;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    width: 1px;
+    height: 1px;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    white-space: nowrap;
   }
 }
