Стилизация планшетной версии страницы Ñкаталога.

--- a/src/less/blocks/catalog.less
+++ b/src/less/blocks/catalog.less
@@ -3,8 +3,16 @@
   flex-wrap: wrap;
   justify-content: space-between;
   padding-top: 30px;
+
+  @media @tablet {
+    padding-top: 80px;
+  }
 }
 
 .catalog__card-product {
   margin: 0 auto 30px;
+
+  @media @tablet {
+    margin-bottom: 54px;
+  }
 }
