--- a/src/less/blocks/site-navigation.less
+++ b/src/less/blocks/site-navigation.less
@@ -12,7 +12,13 @@
     width: 52%;
     padding-left: 50px;
     font-size: 15px;
-    background-color: @bg-color-promo;
+    background-color: @gray-secondary;
+  }
+
+  &--index {
+    @media @tablet {
+      background-color: @bg-color-promo;
+    }
   }
 }
 
