--- a/src/less/style.less
+++ b/src/less/style.less
@@ -8,6 +8,7 @@
 @import "blocks/button.less";
 @import "blocks/page.less";
 @import "blocks/content-wrapper.less";
+@import "blocks/page-header.less";
 @import "blocks/main-nav.less";
 @import "blocks/header-logo.less";
 @import "blocks/site-navigation.less";
