--- a/src/less/blocks/card-product.less
+++ b/src/less/blocks/card-product.less
@@ -4,13 +4,22 @@
   width: 260px;
 
   @media @tablet {
-    width: auto;
+    width: 668px;
   }
 }
 
 .card-product__link-image {
   display: block;
   overflow: hidden;
+  width: 260px;
+
+  @media @tablet {
+    width: 50%;
+  }
+}
+
+.card-product__image {
+  display: block;
   width: 260px;
   height: 195px;
 
@@ -20,21 +29,18 @@
   }
 }
 
-.card-product__image {
-  display: block;
-  width: 260px;
-  height: auto;
-
-  @media @tablet {
-    width: 334px;
-  }
-}
-
 .card-product__description-wrapper {
   box-sizing: border-box;
   padding: 26px 27px 11px;
   width: 260px;
   border: 1px solid @bg-color-separate;
+
+  @media @tablet {
+    display: flex;
+    flex-direction: column;
+    padding-top: 25px;
+    width: 50%;
+  }
 }
 
 .card-product:hover .card-product__description-wrapper {
@@ -51,6 +57,10 @@
   font-size: 17px;
   font-weight: 700;
   color: @font-color-heading;
+
+  @media @tablet {
+    font-size: 20px;
+  }
 }
 
 .card-product__description {
@@ -58,6 +68,10 @@
   margin-bottom: 19px;
   font-size: 13px;
   line-height: 30px;
+
+  @media @tablet {
+    font-size: 15px;
+  }
 }
 
 .card-product__price-wrapper {
@@ -66,11 +80,25 @@
   align-items: center;
   padding-top: 7px;
   border-top: 1px solid @bg-color-separate;
+
+  @media @tablet {
+    margin-top: auto;
+    padding: 3px 4px 0;
+  }
 }
 
 .card-product__price {
   font-weight: 700;
   color: @font-color-heading;
+
+  @media @tablet {
+    font-size: 17px;
+  }
+}
+
+.card-product__button {
+  width: 20px;
+  height: 19px;
 }
 
 .card-product__button-image {
