--- a/src/less/blocks/page-main.less
+++ b/src/less/blocks/page-main.less
@@ -1,6 +1,29 @@
 .page-main__header {
+  position: relative;
   padding: 53px 30px 58px;
   background-color: @gray-secondary;
+
+  @media @tablet {
+    padding: 18px 30px 61px;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    display: none;
+    left: 0;
+    right: 0;
+    background-image: url("../img/bg-zigzag-fill.svg");
+    background-repeat: repeat-x;
+
+    @media @tablet {
+      display: block;
+      bottom: 0;
+      height: 11.5px;
+      background-size: auto 23px;
+      background-position-x: -4px;
+    }
+  }
 }
 
 .page-main__title {
@@ -10,10 +33,19 @@
   font-weight: 700;
   line-height: 30px;
   text-align: center;
+
+  @media @tablet {
+    font-size: 43px;
+    line-height: 50px;
+  }
 }
 
 .page-main__video {
   margin-bottom: 58px;
+
+  @media @tablet {
+    margin-bottom: 63px;
+  }
 }
 
 .page-main__text {
