--- a/src/less/blocks/user-navigation.less
+++ b/src/less/blocks/user-navigation.less
@@ -11,6 +11,7 @@
     justify-content: flex-end;
     width: 51.82%;
     border-bottom: 1px solid @bg-color-separate;
+    background-color: @bg-color-body;
   }
 }
 
