Стилизация планшетной версии модального окна. Исправления.

--- a/src/less/blocks/main-nav.less
+++ b/src/less/blocks/main-nav.less
@@ -15,8 +15,8 @@
 
   @media @tablet {
     justify-content: flex-start;
+    flex-grow: 1;
     padding: 21px 50px;
-    width: 48.18%;
     background-color: @bg-color-body;
   }
 }
