--- a/src/less/blocks/page-main.less
+++ b/src/less/blocks/page-main.less
@@ -1,3 +1,7 @@
+.page-main {
+  border-bottom: 1px solid @gray-secondary;
+}
+
 .page-main__header {
   position: relative;
   padding: 53px 30px 58px;
@@ -41,10 +45,10 @@
 }
 
 .page-main__video {
-  margin-bottom: 58px;
+  margin-bottom: 57px;
 
   @media @tablet {
-    margin-bottom: 63px;
+    margin-bottom: 62px;
   }
 }
 
