--- a/src/less/blocks/user-navigation.less
+++ b/src/less/blocks/user-navigation.less
@@ -9,7 +9,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
-    width: 51.82%;
+    width: 398px;
     border-bottom: 1px solid @bg-color-separate;
     background-color: @bg-color-body;
   }
@@ -44,7 +44,7 @@
 
   &--cart {
     @media @tablet {
-      padding: 32px 50px 32px 83px;
+      padding: 32px 50px 32px 84px;
     }
   }
 }
@@ -55,6 +55,10 @@
   top: 50%;
   transform: translateY(-50%);
   fill: @bg-color-icon;
+
+  @media @tablet {
+    left: 32px;
+  }
 
   .user-navigation__link:hover &,
   .user-navigation__link:active & {
