--- a/src/less/blocks/week-goods.less
+++ b/src/less/blocks/week-goods.less
@@ -58,7 +58,7 @@
 
   @media @tablet {
     margin-left: auto;
-    margin-top: 0;
+    margin-top: 5px;
     margin-bottom: 0;
     max-width: 127px;
     line-height: 17px;
