--- a/src/less/blocks/page-main.less
+++ b/src/less/blocks/page-main.less
@@ -8,7 +8,7 @@
   background-color: @gray-secondary;
 
   @media @tablet {
-    padding: 18px 30px 61px;
+    padding: 18px 50px 61px;
   }
 
   &::after {
@@ -56,4 +56,12 @@
   margin: 22px 0 14px;
   padding: 0 30px;
   font-size: 13px;
+
+  @media @tablet {
+    margin-top: 72px;
+    margin-bottom: 0;
+    padding: 0 50px;
+    font-size: 17px;
+    line-height: 30px;
+  }
 }
