Стилизация десктопной версии главной страницы.

--- a/src/less/blocks/advantages.less
+++ b/src/less/blocks/advantages.less
@@ -5,6 +5,12 @@
   @media @tablet {
     padding-bottom: 25px;
   }
+
+  @media @desktop {
+    padding-left: 225px;
+    padding-top: 33px;
+    padding-bottom: 30px;
+  }
 }
 
 .advantages__title {
