--- a/src/less/blocks/mail-link.less
+++ b/src/less/blocks/mail-link.less
@@ -12,4 +12,8 @@
     color: fade(@font-color-mail, 30%);
     border-bottom-color: fade(@font-color-mail, 30%);
   }
+
+  @media @tablet {
+    padding-bottom: 3px;
+  }
 }
