--- a/src/less/blocks/page-header.less
+++ b/src/less/blocks/page-header.less
@@ -5,6 +5,10 @@
     background-color: @gray-secondary;
   }
 
+  @media @desktop {
+    overflow: hidden;
+  }
+
   &--index {
     @media @tablet {
       background-color: @bg-color-promo;
