--- a/src/less/blocks/table-specification.less
+++ b/src/less/blocks/table-specification.less
@@ -1,6 +1,7 @@
 .table-specification {
   width: 100%;
-  border-collapse: collapse;
+  // border-collapse: collapse;
+  border-spacing: 0;
   line-height: 20px;
 }
 
