--- a/src/less/blocks/advantages-list.less
+++ b/src/less/blocks/advantages-list.less
@@ -8,6 +8,10 @@
   @media @tablet {
     justify-content: space-between;
   }
+
+  @media @desktop {
+    justify-content: flex-start;
+  }
 }
 
 .advantages__list-item {
@@ -25,6 +29,10 @@
     width: 334px;
     font-size: 20px;
     line-height: 22px;
+  }
+
+  @media @desktop {
+    width: 351px;
   }
 
   &::before {
