--- a/src/less/blocks/header-logo.less
+++ b/src/less/blocks/header-logo.less
@@ -15,6 +15,11 @@
     width: 112px;
     height: 46px;
   }
+
+  @media @desktop {
+    width: 150px;
+    height: 75px;
+  }
 }
 
 .header-logo__image {
@@ -25,5 +30,10 @@
   @media @tablet {
     width: 112px;
     height: 46px;
+  }
+
+  @media @desktop {
+    width: 150px;
+    height: 75px;
   }
 }
