--- a/src/less/blocks/promo.less
+++ b/src/less/blocks/promo.less
@@ -1,7 +1,45 @@
 .promo {
   position: relative;
-  padding-top: 71px;
   background-color: @bg-color-promo;
+
+  &::after {
+    content: none;
+    position: absolute;
+    left: 0;
+    right: 0;
+    background-image: url("../img/bg-zigzag-fill.svg");
+    background-repeat: repeat-x;
+
+    @media @tablet {
+      content: "";
+      // height: 11.5px;
+      // background-size: auto 23px;
+      // background-position-x: -4px;
+      bottom: -12px;
+      height: 24px;
+      background-size: 768px 24px;
+      background-position-x: 0;
+    }
+
+    @media @desktop {
+      // bottom: -4px;
+      // height: 22px;
+      // background-size: auto 37px;
+      // background-position-x: -6px;
+      bottom: -17px;
+      height: 34px;
+      background-size: auto 37px;
+      background-position-x: -6px;
+    }
+  }
+}
+
+.promo__content-wrapper {
+  box-sizing: border-box;
+  margin: 0 auto;
+  min-width: 320px;
+  max-width: 1150px;
+  padding-top: 71px;
   background-image: url("../img/hero-mobile@1x.jpg");
   background-size: image-size("../img/hero-mobile@1x.jpg");
   background-position: center -15%;
@@ -16,7 +54,6 @@
     flex-direction: column;
     justify-content: flex-end;
     padding: 93px 50px 0;
-    min-height: 592px;
     background-image: url("../img/hero-tablet@1x.jpg");
     background-size: image-size("../img/hero-tablet@1x.jpg");
     background-position: center bottom;
@@ -26,21 +63,13 @@
     }
   }
 
-  &::after {
-    content: "";
-    position: absolute;
-    display: none;
-    left: 0;
-    right: 0;
-    background-image: url("../img/bg-zigzag-fill.svg");
-    background-repeat: repeat-x;
+  @media @desktop {
+    background-image: url("../img/hero-desktop@1x.jpg");
+    background-size: image-size("../img/hero-desktop@1x.jpg");
+    background-position: center bottom;
 
-    @media @tablet {
-      display: block;
-      bottom: 0;
-      height: 11.5px;
-      background-size: auto 23px;
-      background-position-x: -4px;
+    @media @retina {
+      background-image: url("../img/hero-desktop@2x.jpg");
     }
   }
 }
@@ -56,9 +85,16 @@
   text-align: center;
 
   @media @tablet {
-    margin-bottom: auto;
+    margin-bottom: 373px;
     padding: 0;
     font-size: 43px;
     line-height: 50px;
+  }
+
+  @media @desktop {
+    margin-bottom: 359px;
+    padding: 0 100px;
+    font-size: 53px;
+    line-height: 57px;
   }
 }
