--- a/src/less/blocks/site-navigation.less
+++ b/src/less/blocks/site-navigation.less
@@ -1,4 +1,5 @@
 .site-navigation {
+  position: relative;
   box-sizing: border-box;
   .list-reset();
 
@@ -8,10 +9,39 @@
   @media @tablet {
     display: flex;
     flex-wrap: wrap;
-    order: 1;
-    width: 52%;
     padding-left: 50px;
+    width: 52%;
     font-size: 15px;
+  }
+
+  @media @desktop {
+    width: 500px;
+    border-bottom: 1px solid @bg-color-separate;
+    font-size: 17px;
+    background-color: @bg-color-body;
+  }
+
+  &::before {
+    content: none;
+    position: absolute;
+    top: 0;
+    right: 500px;
+    width: calc(50vw - 575px);
+    height: 100%;
+    background-color: #ffffff;
+
+    @media @desktop {
+      content: "";
+    }
+  }
+}
+
+.site-navigation__item {
+  &:not(:last-child) {
+    @media @desktop {
+      margin-right: 34px;
+      border-right: 1px solid @bg-color-separate;
+    }
   }
 }
 
@@ -21,16 +51,20 @@
   border-bottom: 1px solid @bg-color-separate;
   color: @font-color-menu;
 
+  @media @tablet {
+    padding: 18px 37px 18px 0;
+    border-bottom: none;
+  }
+
+  @media @desktop {
+    padding: 32px 36px 32px 0;
+  }
+
   &[href]:hover {
     color: @font-color-menu--hover;
   }
 
   &[href]:active {
     color: @font-color-menu--active;
-  }
-
-  @media @tablet {
-    padding: 18px 37px 18px 0;
-    border-bottom: none;
   }
 }
