--- a/src/less/blocks/user-navigation.less
+++ b/src/less/blocks/user-navigation.less
@@ -1,4 +1,5 @@
 .user-navigation {
+  position: relative;
   box-sizing: border-box;
   .list-reset();
 
@@ -12,6 +13,25 @@
     width: 398px;
     border-bottom: 1px solid @bg-color-separate;
     background-color: @bg-color-body;
+  }
+
+  @media @desktop {
+    padding-right: 50px;
+    width: 500px;
+  }
+
+  &::after {
+    content: none;
+    position: absolute;
+    top: 0;
+    left: 500px;
+    width: calc(50vw - 575px);
+    height: 100%;
+    background-color: #ffffff;
+
+    @media @desktop {
+      content: "";
+    }
   }
 }
 
@@ -45,6 +65,10 @@
   &--cart {
     @media @tablet {
       padding: 32px 50px 32px 84px;
+    }
+
+    @media @desktop {
+      padding: 32px 0 32px 84px;
     }
   }
 }
