--- a/src/less/blocks/catalog.less
+++ b/src/less/blocks/catalog.less
@@ -7,6 +7,11 @@
   @media @tablet {
     padding-top: 80px;
   }
+
+  @media @desktop {
+    padding-top: 129px;
+    padding-bottom: 3px;
+  }
 }
 
 .catalog__card-product {
@@ -14,5 +19,9 @@
 
   @media @tablet {
     margin-bottom: 54px;
+  }
+
+  @media @desktop {
+    margin: 0 0 54px;
   }
 }
