--- a/src/less/blocks/page-main.less
+++ b/src/less/blocks/page-main.less
@@ -4,43 +4,61 @@
 
 .page-main__header {
   position: relative;
-  padding: 53px 30px 58px;
+  padding-top: 71px;
+  padding-bottom: 76px;
   background-color: @gray-secondary;
 
   @media @tablet {
-    padding: 18px 50px 61px;
+    padding-top: 36px;
+    padding-bottom: 79px;
+  }
+
+  @media @desktop {
+    padding-top: 34px;
+    padding-bottom: 102px;
   }
 
   &::after {
-    content: "";
+    content: none;
     position: absolute;
-    display: none;
     left: 0;
     right: 0;
     background-image: url("../img/bg-zigzag-fill.svg");
     background-repeat: repeat-x;
 
     @media @tablet {
-      display: block;
-      bottom: 0;
-      height: 11.5px;
-      background-size: auto 23px;
-      background-position-x: -4px;
+      content: "";
+      bottom: -12px;
+      height: 24px;
+      background-size: 768px 24px;
+      background-position-x: 0;
+    }
+
+    @media @desktop {
+      bottom: -17px;
+      height: 34px;
+      background-size: 1150px 34px;
+      background-position-x: 13px;
     }
   }
 }
 
 .page-main__title {
-  margin-top: 18px;
-  margin-bottom: 18px;
+  margin: 0;
   font-size: 27px;
   font-weight: 700;
   line-height: 30px;
+  color: @font-color-heading;
   text-align: center;
 
   @media @tablet {
     font-size: 43px;
     line-height: 50px;
+  }
+
+  @media @desktop {
+    font-size: 53px;
+    line-height: 57px;
   }
 }
 
@@ -49,6 +67,10 @@
 
   @media @tablet {
     margin-bottom: 62px;
+  }
+
+  @media @desktop {
+    margin-bottom: 104px;
   }
 }
 
