--- a/src/less/blocks/video.less
+++ b/src/less/blocks/video.less
@@ -1,4 +1,5 @@
 .video {
+  position: relative;
   box-sizing: border-box;
   padding-top: 20px;
   border: 1px solid #ececec;
@@ -7,6 +8,18 @@
     display: flex;
     flex-direction: column;
     padding-top: 0;
+  }
+
+  @media @desktop {
+    padding-left: 682px;
+  }
+
+  &:hover {
+    .ps-drop-shadow(@black; 10%; 90deg; 6px; 0; 10px);
+  }
+
+  &:active {
+    .ps-drop-shadow(@black; 10%; 90deg; 3px; 0; 5px);
   }
 }
 
@@ -26,6 +39,14 @@
     font-size: 20px;
   }
 
+  @media @desktop {
+    padding-left: 79px;
+    padding-top: 38px;
+    padding-right: 57px;
+    margin-top: 57px;
+    margin-bottom: 6px;
+  }
+
   &::before {
     content: "";
     position: absolute;
@@ -41,6 +62,11 @@
     @media @tablet {
       left: 41px;
     }
+
+    @media @desktop {
+      left: 79px;
+      top: 0;
+    }
   }
 }
 
@@ -55,12 +81,20 @@
     width: 666px;
     height: 455px;
   }
+
+  @media @desktop {
+    position: absolute;
+    left: 0;
+    top: 0;
+    margin: 0;
+    width: 682px;
+  }
 }
 
 .video__content {
   display: block;
-  width: 258px;
-  height: 150px;
+  width: 100%;
+  height: 100%;
   background-image: url("../img/video-mobile@1x.jpg");
   background-size: image-size("../img/video-mobile@1x.jpg");
   background-color: @green-secondary;
@@ -71,13 +105,20 @@
   }
 
   @media @tablet {
-    width: 666px;
-    height: 455px;
     background-image: url("../img/video-tablet@1x.jpg");
     background-size: image-size("../img/video-tablet@1x.jpg");
 
     @media @retina {
       background-image: url("../img/video-tablet@2x.jpg");
+    }
+  }
+
+  @media @desktop {
+    background-image: url("../img/video-desktop@1x.jpg");
+    background-size: image-size("../img/video-desktop@1x.jpg");
+
+    @media @retina {
+      background-image: url("../img/video-desktop@2x.jpg");
     }
   }
 }
@@ -111,14 +152,10 @@
     padding: 14px 40px 45px;
     order: 2;
   }
-}
 
-.video:hover .video__description-wrapper {
-  .ps-drop-shadow(@black; 10%; 90deg; 6px; 0; 10px);
-}
-
-.video:active .video__description-wrapper {
-  .ps-drop-shadow(@black; 10%; 90deg; 3px; 0; 5px);
+  @media @desktop {
+    padding: 14px 57px 60px 79px;
+  }
 }
 
 .video__description {
@@ -137,5 +174,9 @@
   @media @tablet {
     margin-top: 35px;
     max-width: 600px;
+  }
+
+  @media @desktop {
+    margin-top: 45px;
   }
 }
