--- a/src/less/blocks/form-feedback.less
+++ b/src/less/blocks/form-feedback.less
@@ -1,10 +1,33 @@
 .form-feedback {
-  padding-top: 10px;
+  padding-top: 22px;
   padding-bottom: 55px;
 
   @media @tablet {
-    padding-top: 7px;
-    padding-bottom: 44px;
+    padding-top: 72px;
+    padding-bottom: 45px;
+  }
+
+  @media @desktop {
+    padding-top: 122px;
+  }
+}
+
+.form-feedback__description {
+  padding: 0 30px;
+  margin: 0 auto 24px;
+  font-size: 13px;
+
+  @media @tablet {
+    padding: 0 50px;
+    margin-bottom: 8px;
+    font-size: 17px;
+    line-height: 30px;
+  }
+
+  @media @desktop {
+    margin-bottom: 7px;
+    padding: 0;
+    max-width: 700px;
   }
 }
 
@@ -38,6 +61,11 @@
   &--color {
     margin-bottom: 0;
     padding-bottom: 13px;
+
+    @media @tablet {
+      display: flex;
+      flex-wrap: wrap;
+    }
   }
 
   &--name {
@@ -69,6 +97,10 @@
     left: 50px;
     top: 66px;
     width: 100px;
+  }
+
+  @media @desktop {
+    left: 112px;
   }
 
   &--phone,
@@ -109,10 +141,27 @@
     padding-left: 167px;
   }
 
+  @media @desktop {
+    padding-left: 175px;
+    padding-right: 175px;
+  }
+
   &--color {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-content: space-between;
+
+    @media @tablet {
+      box-sizing: border-box;
+      width: 100%;
+      min-height: 204px;
+    }
+
+    @media @desktop {
+      padding-right: 145px;
+      min-height: 128px;
+    }
   }
 }
 
@@ -136,14 +185,11 @@
     min-width: 240px;
 
     @media @tablet {
-      margin-bottom: 24px;
+      margin-bottom: 0;
     }
 
-    &:last-child,
-    &:nth-last-child(2) {
-      @media @tablet {
-        margin-bottom: 0;
-      }
+    @media @desktop {
+      min-width: 203px;
     }
   }
 
@@ -340,6 +386,10 @@
     @media @tablet {
       right: 26px;
     }
+
+    @media @desktop {
+      right: 8px;
+    }
   }
 
   &--email {
@@ -349,6 +399,10 @@
 
     @media @tablet {
       right: 22px;
+    }
+
+    @media @desktop {
+      right: 4px;
     }
   }
 }
@@ -393,8 +447,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 4px;
+    padding-top: 3px;
     padding-bottom: 4px;
+  }
+
+  @media @desktop {
+    padding: 0 225px 2px;
   }
 }
 
