--- a/src/less/blocks/promo-list.less
+++ b/src/less/blocks/promo-list.less
@@ -4,14 +4,14 @@
 
   width: 100%;
 
-  @media @tablet {
+  @media @mobile-l {
     display: flex;
     flex-wrap: wrap;
   }
 }
 
 .promo-list__item {
-  @media @tablet {
+  @media @mobile-l {
     width: 50%;
   }
 }
