--- a/src/less/blocks/promo.less
+++ b/src/less/blocks/promo.less
@@ -24,7 +24,7 @@
       bottom: -17px;
       height: 34px;
       background-size: auto 37px;
-      background-position-x: -6px;
+      background-position-x: 12px;
     }
   }
 }
@@ -45,9 +45,11 @@
     background-image: url("../img/hero-mobile@2x.jpg");
   }
 
+  @media @mobile-l-only {
+    min-height: 400px;
+  }
+
   @media @tablet {
-    display: flex;
-    flex-direction: column;
     min-height: 685px;
     padding-top: 93px;
     background-image: url("../img/hero-tablet@1x.jpg");
