Интерактивная карта. Модальное окно.

--- a/src/less/blocks/footer-logo.less
+++ b/src/less/blocks/footer-logo.less
@@ -11,8 +11,8 @@
   width: 102px;
   height: 34px;
 
-  .footer-logo:hover &,
-  .footer-logo:active & {
+  .footer-logo[href]:hover &,
+  .footer-logo[href]:active & {
     fill: @green-secondary--hover;
   }
 }
