--- a/src/less/blocks/site-navigation.less
+++ b/src/less/blocks/site-navigation.less
@@ -34,6 +34,14 @@
       content: "";
     }
   }
+
+  &--closed {
+    display: none;
+
+    @media @tablet {
+      display: flex;
+    }
+  }
 }
 
 .site-navigation__item {
