--- a/src/less/blocks/user-navigation.less
+++ b/src/less/blocks/user-navigation.less
@@ -33,6 +33,14 @@
       content: "";
     }
   }
+
+  &--closed {
+    display: none;
+
+    @media @tablet {
+      display: flex;
+    }
+  }
 }
 
 .user-navigation__link {
