--- a/src/less/blocks/card-product.less
+++ b/src/less/blocks/card-product.less
@@ -131,6 +131,7 @@
   width: 20px;
   height: 19px;
   fill: @bg-color-icon;
+  pointer-events: none;
 
   .card-product__button:hover &,
   .card-product__button:active & {
