--- a/src/less/blocks/map.less
+++ b/src/less/blocks/map.less
@@ -33,3 +33,12 @@
   background-size: 66px 101px;
   background-repeat: no-repeat;
 }
+
+.map__interactive {
+  position: absolute;
+  z-index: 50;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
